<resources>
    <string name="app_name">SignUpForm</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>
    <string name="username">Username:</string>
    <string name="hints">Please enter your username</string>
    <string name="password">Password:</string>
    <string name="hints2">Please enter your password</string>
    <string name="hints3">Please re-enter password</string>
    <string name="confirm">Confirm:</string>
    <string name="submit">SUBMIT</string>
</resources>
