<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_height="match_parent"
    android:layout_width="match_parent"
    android:padding="16dp"
    tools:context=".LoginActivity">

    <LinearLayout
        android:id="@+id/username_field"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:id="@+id/username"
            android:text="@string/username"
            android:textSize="20sp"
            android:layout_weight="30"
            android:layout_width="0dp"
            android:layout_height="wrap_content" />
        <EditText
            android:id="@+id/submit_area"
            android:hint="@string/hints"
            android:textSize="19sp"
            android:layout_toRightOf="@id/username"
            android:layout_width="0dp"
            android:layout_weight="70"
            android:layout_height="wrap_content" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/password_field"
        android:layout_below="@id/username_field"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:id="@+id/pass"
            android:textSize="20sp"
            android:text="@string/password"
            android:layout_weight="30"
            android:layout_below="@id/username_field"
            android:layout_width="0dp"
            android:layout_height="wrap_content" />
        <EditText
            android:id="@+id/password"
            android:hint="@string/hints2"
            android:textSize="19sp"
            android:layout_weight="70"
            android:layout_toRightOf="@id/pass"
            android:layout_width="0dp"
            android:layout_height="wrap_content" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/confirm_password_field"
        android:layout_below="@id/password_field"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:id="@+id/confirm"
            android:textSize="20sp"
            android:text="@string/confirm"
            android:layout_width="0dp"
            android:layout_weight="30"
            android:layout_height="wrap_content" />
        <EditText
            android:id="@+id/password_confirm"
            android:hint="@string/hints3"
            android:textSize="19sp"
            android:layout_weight="70"
            android:layout_toRightOf="@id/confirm"
            android:layout_width="0dp"
            android:layout_height="wrap_content" />
    </LinearLayout>

    <Button
        android:text="@string/submit"
        android:textStyle="bold"
        android:layout_below="@id/confirm_password_field"
        android:layout_alignRight="@id/confirm_password_field"
        android:layout_marginEnd="20dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />



</RelativeLayout>
